--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,15 @@ services:
     - ".:/poloniex-graph"
     env_file:
       - .env
+  influxdb:
+    image: influxdb:1.8.0
+    env_file:
+      - .env
+    volumes:
+    - ./data/influxdb:/var/lib/influxdb
+  grafana:
+    image: grafana/grafana
+    ports:
+    - 3000:3000
+    environment:
+      GF_INSTALL_PLUGINS: grafana-clock-panel,grafana-simple-json-datasource
