feat: add Dockerfile

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
   app:
-    image: golang:1.16-alpine
+    image: henri9813/poloniex-graph
+    build: . # <-- Comment here if you don't want to build
     working_dir: /poloniex-graph
     command: go run .
     volumes:
