--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   app:
@@ -6,7 +6,7 @@ services:
     working_dir: /poloniex-graph
     command: go run .
     volumes:
-    - ".:/poloniex-graph"
+      - ".:/poloniex-graph"
     env_file:
       - .env
   influxdb:
@@ -14,10 +14,10 @@ services:
     env_file:
       - .env
     volumes:
-    - ./data/influxdb:/var/lib/influxdb
+      - ./data/influxdb:/var/lib/influxdb
   grafana:
     image: grafana/grafana
     ports:
-    - 3000:3000
+      - 3000:3000
     environment:
       GF_INSTALL_PLUGINS: grafana-clock-panel,grafana-simple-json-datasource
